# SKCQ

./: .gitignore  AGENTS.md  README.md  build.py  distributed_run.py  eslint.config.js  eval_quantized.py  make_agent.sh  opencode.json  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.sh  setup_worker.sh  sweep_plan.md  vq_worker.py  worker.py  workers.local.yaml  workers.smoke.yaml  workers.yaml
.opencode/agents/: exploration_agent_template.md  implementation_agent_template.md  implementation_serval_Ornith_1_0_9B.md  lean4_agent_template.md  lean4_jaguar_rocm_Leanstral_1_5_119B_A6B_Q4_K_M.md  lean4_serval_Ornith_1_0_9B.md  lean4_tiger_Ornith_1_0_397B_Q6.md  lean4_tiger_leanstral_Leanstral_1_5_Q6.md
configs/: default.yaml
configs/sweep/: kbs128_nb16_cb1.yaml  kbs128_nb16_cb2.yaml  kbs128_nb16_cb3.yaml  kbs128_nb2_cb1.yaml  kbs128_nb2_cb2.yaml  kbs128_nb2_cb3.yaml  kbs128_nb4_cb1.yaml  kbs128_nb4_cb2.yaml  kbs128_nb4_cb3.yaml  kbs128_nb8_cb1.yaml  kbs128_nb8_cb2.yaml  kbs128_nb8_cb3.yaml  kbs16_nb16_cb1.yaml  kbs16_nb16_cb2.yaml  kbs16_nb16_cb3.yaml  kbs16_nb1_cb1.yaml  kbs16_nb1_cb2.yaml  kbs16_nb1_cb3.yaml  kbs16_nb2_cb1.yaml  kbs16_nb2_cb2.yaml  kbs16_nb2_cb3.yaml  kbs16_nb4_cb1.yaml  kbs16_nb4_cb2.yaml  kbs16_nb4_cb3.yaml  kbs16_nb8_cb1.yaml  kbs16_nb8_cb2.yaml  kbs16_nb8_cb3.yaml  kbs256_nb16_cb1.yaml  kbs256_nb16_cb2.yaml  kbs256_nb16_cb3.yaml  kbs256_nb4_cb1.yaml  kbs256_nb4_cb2.yaml  kbs256_nb4_cb3.yaml  kbs256_nb8_cb1.yaml  (+47 more)
cuda/: pyproject.toml
experiments/: all_results.csv  test_build_codebook.py  test_cluster_block.py  test_kmeans.py  test_large_block.py  test_recon.py  test_reshape.py  test_reshape2.py  weight_quant_error.csv  weight_quant_error.py  weight_quant_error_l24.csv  zador_estimate.py
leopard/: pyproject.toml
rocm/: pyproject.toml
scripts/: collect_sweep.py  dashboard.py  distributed_sweep.sh  download.sh  fmt.sh  gen_sweep.py  gen_sweep_configs.py  gen_sweep_configs.sh  gen_vq_hyperparams.py  lint.sh  run_sweep_distributed.py  run_vq_hyperparams.py  sweep.sh  sweep_tier1.sh  typecheck.sh  vq_dashboard.py
skcq/: __init__.py  clustering.py  codebook_experts.py  config.py  cuda_server.py  eval_model.py  experiment.py  logging_setup.py  measurements.py  metrics.py  orchestrator.py  protocol.py  quantize.py  ray_worker.py  rocm_client.py  tasks.py
some_math/: README.md  SomeMath.lean  lake-manifest.json  lakefile.toml  quantization_theorems_research.md
sweep_results/: configs.json
tests/: test_codebook.py
(+20 files in other folders)
