[project]
name = "skcq"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "ray[default,client]>=2.55",
    "pt-kmeans>=0.9",
    "safetensors",
    "huggingface_hub",
    "pydantic>=2",
    "pyyaml",
    "transformers",
    "accelerate",
]

[tool.ruff]
target-version = "py314"
line-length = 100
extend-exclude = ["poc"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]
ignore = ["N812", "TC001", "TC002", "TC003"]

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true

[tool.setuptools.packages.find]
include = ["skcq*"]

[tool.pytest.ini_options]
pythonpath = ["."]
