[project]
name = "skcq-leopard"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "accelerate",
    "huggingface-hub",
    "pt-kmeans>=0.9.2",
    "pydantic>=2.13.4",
    "rocm[libraries]==7.13.0",
    "safetensors",
    "torch==2.11.0+rocm7.13.0",
    "tqdm",
    "transformers>=5.0.0",
]

[[tool.uv.index]]
name = "rocm"
url = "https://repo.amd.com/rocm/whl/gfx120X-all/"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"

[tool.uv]
index-strategy = "unsafe-best-match"
