[project]
name = "skcq-rocm"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "accelerate",
    "datasets>=5.0.0",
    "huggingface-hub",
    "json-rpc>=1.15.0",
    "pt-kmeans>=0.9.2",
    "pydantic>=2.13.4",
    "rocm[libraries]==7.13.0",
    "safetensors",
    "torch==2.11.0+rocm7.13.0",
    "torchaudio==2.11.0+rocm7.13.0",
    "torchvision==0.26.0+rocm7.13.0",
    "transformers>=5.0.0",
]

[[tool.uv.index]]
name = "rocm"
url = "https://repo.amd.com/rocm/whl/gfx1151/"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]

[tool.uv]
index-strategy = "unsafe-best-match"
